--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
         "start": "next start"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.554.0",
         "next": "16.0.3",
         "react": "19.2.0",
-        "react-dom": "19.2.0"
+        "react-dom": "19.2.0",
+        "tailwind-merge": "^3.4.0"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
@@ -22,6 +26,7 @@
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5"
     }
 }
