--- a/backend/Makefile
+++ b/backend/Makefile
@@ -6,41 +6,50 @@ DB_PASS = password
 
 DB_URL = postgresql://$(DB_USER):$(DB_PASS)@$(CONTAINER_NAME):$(DB_PORT)/$(DB_NAME)?sslmode=disable
 
-default: up
+default: db-up
 
-fill_database:
-	cat fill_dev_database.sql | docker exec -i $(CONTAINER_NAME) psql -U $(DB_USER) -d $(DB_NAME)
+# db-fill:
+# 	cat fill_dev_database.sql | docker exec -i $(CONTAINER_NAME) psql -U $(DB_USER) -d $(DB_NAME)
 
-up:
+db-up:
 	docker run --rm \
 		--network devdbnetwork \
 		-v $(PWD)/migration:/migration \
 		-e DB_URL=$(DB_URL) \
 		migrate/migrate -path=/migration -database $(DB_URL) up
 
-down:
+db-down:
 	docker run --rm \
 		--network devdbnetwork \
 		-v $(PWD)/migration:/migration \
 		-e DB_URL=$(DB_URL) \
 		migrate/migrate -path=/migration -database $(DB_URL) down 1
 
-create:
+db-create:
 	docker run --rm \
 		--network devdbnetwork \
 		-e PGPASSWORD=$(DB_PASS) \
 		postgres:17 \
 		createdb -h $(CONTAINER_NAME) -p $(DB_PORT) -U $(DB_USER) --no-password $(DB_NAME)
 
-drop:
+db-drop:
 	docker run --rm \
 		--network devdbnetwork \
 		-e PGPASSWORD=$(DB_PASS) \
 		postgres:17 \
 		dropdb -h $(CONTAINER_NAME) -p $(DB_PORT) -U $(DB_USER) --no-password $(DB_NAME)
 
-reset: drop create up fill_database
+db-reset: db-drop db-create db-up # db-fill
 
-docker:
+db-docker:
 	-docker network create devdbnetwork
 	docker run --rm --network devdbnetwork --name $(CONTAINER_NAME) -e POSTGRES_PASSWORD=$(DB_PASS) -e POSTGRES_USER=$(DB_USER) -p $(DB_PORT):$(DB_PORT) -d postgres:17.2
+
+
+# elasticsearch
+es-docker:
+	docker run --rm --network devdbnetwork --name es -p 9200:9200 \
+		-e "discovery.type=single-node" \
+		-e "xpack.security.enabled=false" \
+		-e "ES_JAVA_OPTS=-Xms512m -Xmx512m" \
+		-d elasticsearch:9.2.1
