--- a/backend/server/pyproject.toml
+++ b/backend/server/pyproject.toml
@@ -1,11 +1,12 @@
 [project]
-name = "download"
+name = "server"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "elasticsearch>=9.2.0",
-    "psycopg2>=2.9.11",
-    "requests>=2.32.5",
+    "fastapi>=0.121.3",
+    "pydantic>=2.12.4",
+    "uvicorn>=0.38.0",
 ]
