--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,15 @@
         "start": "next start"
     },
     "dependencies": {
+        "@radix-ui/react-select": "^2.2.6",
+        "@radix-ui/react-slot": "^1.2.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.554.0",
+        "motion": "^12.23.24",
         "next": "16.0.3",
+        "nuqs": "^2.8.1",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "tailwind-merge": "^3.4.0"
@@ -25,6 +30,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "shadcn": "^3.5.0",
         "tailwindcss": "^4",
         "tw-animate-css": "^1.4.0",
         "typescript": "^5"
