--- a/backend/Makefile
+++ b/backend/Makefile
@@ -6,10 +6,10 @@ DB_PASS = password
 
 DB_URL = postgresql://$(DB_USER):$(DB_PASS)@$(CONTAINER_NAME):$(DB_PORT)/$(DB_NAME)?sslmode=disable
 
-default: db-up
+-include .env
+export
 
-# db-fill:
-# 	cat fill_dev_database.sql | docker exec -i $(CONTAINER_NAME) psql -U $(DB_USER) -d $(DB_NAME)
+default: db-up
 
 db-up:
 	docker run --rm \
@@ -39,17 +39,26 @@ db-drop:
 		postgres:17 \
 		dropdb -h $(CONTAINER_NAME) -p $(DB_PORT) -U $(DB_USER) --no-password $(DB_NAME)
 
-db-reset: db-drop db-create db-up # db-fill
+db-reset: db-drop db-create db-up
 
 db-docker:
 	-docker network create devdbnetwork
 	docker run --rm --network devdbnetwork --name $(CONTAINER_NAME) -e POSTGRES_PASSWORD=$(DB_PASS) -e POSTGRES_USER=$(DB_USER) -p $(DB_PORT):$(DB_PORT) -d postgres:17.2
 
 
+db-reset-dev: 
+	@[ -n "${DEV_DB_URL}" ] || { echo "set DEV_DB_URL"; exit 1; }
+	docker run --rm postgres:17 psql $(DEV_DB_URL)/postgres -c "DO \$$\$$ BEGIN PERFORM pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname = '$(DB_NAME)'; END \$$\$$;"
+	-docker run --rm postgres:17 psql $(DEV_DB_URL)/postgres -c "DROP DATABASE $(DB_NAME)"
+	docker run --rm postgres:17 psql $(DEV_DB_URL)/postgres -c "CREATE DATABASE $(DB_NAME)"
+	docker run --rm \
+			-v $(PWD)/migration:/migration \
+			migrate/migrate -path=/migration -database $(DEV_DB_URL)/$(DB_NAME)?sslmode=disable up
+
 # elasticsearch
 es-docker:
 	docker run --rm --network devdbnetwork --name es -p 9200:9200 \
 		-e "discovery.type=single-node" \
-		-e "xpack.security.enabled=false" \
 		-e "ES_JAVA_OPTS=-Xms512m -Xmx512m" \
+		-e "ELASTIC_PASSWORD=changeme" \
 		-d elasticsearch:9.2.1
