--- a/backend/server/pyproject.toml
+++ b/backend/server/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "elasticsearch>=9.2.0",
     "fastapi>=0.121.3",
     "httpx>=0.28.1",
+    "openai>=2.8.1",
     "psycopg2>=2.9.11",
     "pydantic>=2.12.4",
     "uvicorn>=0.38.0",
