--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
         "start": "next start"
     },
     "dependencies": {
+        "@fortawesome/free-brands-svg-icons": "^7.1.0",
+        "@fortawesome/free-solid-svg-icons": "^7.1.0",
+        "@fortawesome/react-fontawesome": "^3.1.0",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
         "class-variance-authority": "^0.7.1",
@@ -19,10 +22,10 @@
         "lucide-react": "^0.554.0",
         "motion": "^12.23.24",
         "next": "16.0.3",
-        "nuqs": "^2.8.1",
         "react": "19.2.0",
         "react-dom": "19.2.0",
-        "tailwind-merge": "^3.4.0"
+        "tailwind-merge": "^3.4.0",
+        "use-debounce": "^10.0.6"
     },
     "devDependencies": {
         "@biomejs/biome": "1.9.4",
