--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "next": "16.0.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
+        "react-force-graph-2d": "^1.29.0",
         "tailwind-merge": "^3.4.0",
         "use-debounce": "^10.0.6"
     },
