count proper tokens

--- a/backend/server/pyproject.toml
+++ b/backend/server/pyproject.toml
@@ -12,5 +12,6 @@ dependencies = [
     "openai>=2.8.1",
     "psycopg2>=2.9.11",
     "pydantic>=2.12.4",
+    "tiktoken>=0.12.0",
     "uvicorn>=0.38.0",
 ]
