--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,17 @@
         "@fortawesome/free-brands-svg-icons": "^7.1.0",
         "@fortawesome/free-solid-svg-icons": "^7.1.0",
         "@fortawesome/react-fontawesome": "^3.1.0",
+        "@0glabs/0g-serving-broker": "0.5.4",
         "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-slot": "^1.2.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "embla-carousel-react": "^8.6.0",
+        "ethers": "^6.11.1",
         "lucide-react": "^0.554.0",
         "motion": "^12.23.24",
         "next": "16.0.3",
+        "openai": "^4.28.0",
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "tailwind-merge": "^3.4.0",
