--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,13 @@
         "@radix-ui/react-slot": "^1.2.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "embla-carousel-autoplay": "^8.6.0",
         "embla-carousel-react": "^8.6.0",
         "lucide-react": "^0.554.0",
         "motion": "^12.23.24",
         "next": "16.0.3",
         "react": "19.2.0",
         "react-dom": "19.2.0",
+        "react-force-graph-2d": "^1.29.0",
         "tailwind-merge": "^3.4.0",
         "use-debounce": "^10.0.6"
     },
