--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
         "react": "19.2.0",
         "react-dom": "19.2.0",
         "react-force-graph-2d": "^1.29.0",
+        "react-markdown": "^9.1.0",
         "tailwind-merge": "^3.4.0",
         "use-debounce": "^10.0.6"
     },
