--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -14,6 +14,10 @@ COPY . .
 ENV NEXT_TELEMETRY_DISABLED=1
 ARG API_URL
 ENV API_URL=${API_URL}
+ARG NEXT_PUBLIC_UMAMI_WEBSITE_ID
+ENV NEXT_PUBLIC_UMAMI_WEBSITE_ID=${NEXT_PUBLIC_UMAMI_WEBSITE_ID}
+ARG NEXT_PUBLIC_UMAMI_URL
+ENV NEXT_PUBLIC_UMAMI_URL=${NEXT_PUBLIC_UMAMI_URL}
 
 RUN bun run build
 
@@ -23,6 +27,10 @@ WORKDIR /app
 ENV NEXT_TELEMETRY_DISABLED=1
 ARG API_URL
 ENV API_URL=${API_URL}
+ARG NEXT_PUBLIC_UMAMI_WEBSITE_ID
+ENV NEXT_PUBLIC_UMAMI_WEBSITE_ID=${NEXT_PUBLIC_UMAMI_WEBSITE_ID}
+ARG NEXT_PUBLIC_UMAMI_URL
+ENV NEXT_PUBLIC_UMAMI_URL=${NEXT_PUBLIC_UMAMI_URL}
 
 ENV NODE_ENV=production \
     PORT=3000 \
